--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,9 +1,13 @@
 %!TEX root = ../paper.tex
 % Our development suggests two predictions that could be used to test the theory described here. One is that,
 \section{Conclusion}
-Our analysis predicts that, in general, an ensemble of systems where robustness has been the predominant object of selection and has been positively selected over a sufficiently long period of time should exhibit a bias toward more hierarchical network topologies. Given the manner in which we define robustness in \ref{eq:robustnessfromstoch}, this is a very general constraint. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their dynamical robustness as we have defined it here \cite{Zhao2006,Bhardwaj2010,Colm,Prill2005}. Indeed, Figure 2 from \cite{Prill2005} demonstrates an enrichment of various hierarchical network architectures consisting of multiple SCCs relative to those containing cycles with single SCCs for networks with three and four variables in \emph{E. coli}, \emph{S. cerevisiae}, and \emph{D. melanogaster} transcription factor networks as well as the signal transduction knowledge environment network and the \emph{C. elegans} neural network. The network architecture that we predict to be enriched by selection for robustness for three variable networks ranks 4th out of 13 in overall abundance across these networks and within each network individually with the exception of the \emph{C. elegans} neural network, and the three more abundant network architectures are all proper subgraphs of this one. These results are essentially consistent with our prediction, though, of course, we would not claim that there could not be various alternative explanations for these observations. At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been observed to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}.
+Our analysis predicts that, in general, an ensemble of systems where robustness has been the predominant object of selection and has been positively selected over a sufficiently long period of time should exhibit a bias toward more hierarchical network topologies. Given the manner in which we define robustness in \ref{eq:robustnessfromstoch}, this is a very general constraint. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their dynamical robustness as we have defined it here \cite{Zhao2006,Bhardwaj2010,Colm,Prill2005}.
+
+Indeed, Figure 2 from \cite{Prill2005} demonstrates an enrichment of various hierarchical network architectures consisting of multiple SCCs relative to those containing cycles with single SCCs for networks with three and four variables in \emph{E. coli}, \emph{S. cerevisiae}, and \emph{D. melanogaster} transcription factor networks as well as the signal transduction knowledge environment network and the \emph{C. elegans} neural network. The network architecture that we predict to be most enriched by selection for robustness for three variable networks ranks fourth out of thirteen in overall abundance across these empirically observed classes of networks and within each class of network individually. In each case, the three most abundant network architectures are all proper subgraphs of the fourth-ranked most hierarchical one. These observations are consistent with both our analytical and numerical predictions, though, of course, we do not claim that there could not be alternative explanations for the relative enrichment of more hierarchical network architectures in these systems.
+
+At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been observed to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}.
 %The other prediction of the theory outlined here that may be able to be checked is the converse statement that an ensemble of systems demonstrating a positive or negative bias in their network topology toward hierarchy may have been under selection for, or respectively against, robustness. Of course, in this case, factors other than selection for robustness would not be ruled out by this analysis alone.
-In the long term, this prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that impose differential selection strengths for dynamical robustness \cite{Leroi1994}.
+In the long term, our prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that impose differential selection strengths for dynamical robustness \cite{Leroi1994,Hindre2012}.
 
 %The fact that such a relationship exists has the potential to unify our understanding of biological networks.
 In order to further this work from a theoretical perspective, it will be necessary to deepen our understanding of the relationship between dynamical robustness and the underlying network topology. Following May \cite{Cohen1984,May1972a,Radius2014,Majumdar2014}, this will involve improving the general understanding of the relationship between perturbations to a system's structure and the qualitative changes in the dynamical phenomena it can produce. The conservation of robustness with respect to nontrivial symmetries including the interchange of SCCs and permutation within SCCs suggests the existence of an evolutionary neutral space. A deeper mathematical characterization of the full symmetry groupoid of dynamical robustness may thus help to characterize this potential evolutionary constraint \cite{Golubitsky2006}.
