--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -324,9 +324,9 @@ Inspection of this formula demonstrates that dynamical robustness takes on highe
 where the SCCs correspond to the upper $1 \times 1$ and lower $2 \times 2$ blocks and the other entries correspond to $l$, the links between the SCCs. Thus, in this simple case, we see that maximizing the number of links between SCCs maximizes dynamical robustness.
 
 \subsection{Most hierarchical network architectures maximize dynamical robustness}
-Following the examples of the previous section, here we show, in general, that dynamical robustness is maximized for a given collection of SCCs by maximizing the number of links between them. This is accomplished by demonstrating that any graph $G$ with $l < l_{\mathrm{max}}$, where $l_{\mathrm{max}}$ refers to the maximum possible number of links between the given collection of SCCs, must have a lower dynamical robustness than one of the graphs having $l=l_{\mathrm{max}}$, referred to as $G_{\mathrm{max}}$, and that these $G_{\mathrm{max}}$ have SCCs related by the graph $G_{\mathrm{tot}}$ which gives the total ordering on those SCCs.
+Following the examples of the previous section, here we show, in general, that dynamical robustness is maximized for a given collection of SCCs by maximizing the number of links between them. This is accomplished by demonstrating that any graph $G$ with $l < l_{\mathrm{max}}$ ($l_{\mathrm{max}}$ refers to the maximum possible number of links between the given collection of SCCs) must have a lower dynamical robustness than one of the graphs $G_{\mathrm{max}}$ having $l=l_{\mathrm{max}}$, and that these $G_{\mathrm{max}}$ have SCCs related by the graph $G_{\mathrm{tot}}$ which gives the total ordering on the given set of SCCs.
 
-Examining the expression in \ref{eq:robschematic} and noting that $R_{\alpha}$ are all strictly less than one proves that networks maximizing $l$, will also maximize $R$.  Given two connected components $C_{\alpha}$ and $C_{\beta}$ with $v_{\alpha}$ and $v_{\beta}$ nodes respectively, we have a maximum of $v_{\alpha} v_{\beta}$ links going from $C_{\alpha}$ to $C_{\beta}$.  Hence, $l \le \sum_{(\alpha,\beta) \in \hier(G)} v_{\alpha} v_{\beta}$.  Since every acyclic digraph can be embedded into a totally ordered
+Examining the expression in \ref{eq:robschematic} and noting that $R_{\alpha}$ are all strictly less than one proves that networks maximizing $l$ for a given set of SCCs, will also maximize $R$.  Given two connected components $C_{\alpha}$ and $C_{\beta}$ with $v_{\alpha}$ and $v_{\beta}$ nodes respectively, we have a maximum of $v_{\alpha} v_{\beta}$ links going from $C_{\alpha}$ to $C_{\beta}$.  Hence, $l \le \sum_{(\alpha,\beta) \in \hier(G)} v_{\alpha} v_{\beta}$.  Since every acyclic digraph can be embedded into a totally ordered
 set, we may assume without loss of generality that our components have
 been ordered in a way such that, if $(\alpha,\beta) \in \hier(G)$, then $\alpha <
 \beta$.  Hence, $l \le l_{\mathrm{max}}$ where
@@ -352,7 +352,7 @@ R(G_{\mathrm{max}}) =
 \subsection{Simultaneous perturbation of multiple interaction strengths}
 The results of the previous sections also hold when relationships between multiple system variables are perturbed simultaneously,
 although the notation becomes more complicated.  Suppose that we
-resample $m$ interactions.  Then the analog of \ref{eq:singleresamplemutau} is
+resample $m$ interactions, as a model for cases in which multiple interaction strengths among system variables are modified in a single timestep of the evolutionary process.  Then the analog of \ref{eq:singleresamplemutau} is
 \begin{equation}\label{eq:multipleresamplemutau}
 \begin{aligned}
 \tau^{(m)}(A' \mid A) &= \frac{1}{\binom{d}{m}} \sum_{i_1, \ldots, i_m}
@@ -372,7 +372,7 @@ m_0 \le \sum_{i=1}^{n-1} \sum_{j=i+1}^n \ell_{ij} \quad\&\quad
 \end{equation*}
 \end{widetext}
 Then, given $(m_0, m_1, \ldots, m_n) \in M$, there are ${m \choose
-m_0, m_1, \ldots. m_n}$ ways of choosing $m_i$ links from $C_i$ and
+m_0, m_1, \ldots. m_n}$ ways of choosing $m_i$ links from within $C_i$ and
 $m_0$ links between SCCs.  Hence, our
 weighted average becomes
 \begin{widetext}
@@ -395,8 +395,8 @@ v_\alpha)^2 - \sum_{\alpha=1}^n v_\alpha^2)$, which is attained when $\hier(G_{m
 G_{tot}$.  Hence, we conclude that $R(G, S, \mu, \tau^{(m)}) \le
 R(G_{\mathrm{max}}, S, \mu, \tau^{(m)})$.
 
-This analytical result implies that the interaction graphs for systems that are the most robust will maximize the number of links between a given set of SCCs. Because this result is purely topological in nature, it does not depend at all upon any particular details such as the probability distribution from which the variable interaction strengths are sampled or the size of the system. Any network whose associated dynamical system has the interaction graph among its SCCs equivalent to the total ordering is more robust than those associated to any of the other interaction graphs in \reffigscc{}. The graph associated to the total ordering is the most hierarchical network architecture for any given number of SCCs like that of \reffigscc{} top for three variable systems where the \emph{highest} variable in the hierarchy has directed links to all other variables in the network, the second highest variable has directed links to all other variables in the network except the highest one, \emph{et cetera} (\refsupp{}). The result that dynamical robustness is correlated with network hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles we have studied directly.
+This analytical result implies that the interaction graphs for systems that are the most robust will maximize the number of links between a given set of SCCs. Because this result is purely topological in nature, it does not depend at all upon any particular details such as the size of the system or the probability distribution from which the variable interaction strengths are sampled. Any network whose associated dynamical system has the interaction graph among its SCCs equivalent to the total ordering is more robust than those associated to any of the other interaction graphs in \reffigscc{}. The graph associated to the total ordering is the most hierarchical network architecture for any given number of SCCs like that of \reffigscc{} top for three variable systems where the \emph{highest} variable in the hierarchy has directed links to all other variables in the network, the second highest variable has directed links to all other variables in the network except the highest one, \emph{et cetera} (\refsupp{} \ref{sec:totalordering}). The result that dynamical robustness is correlated with network hierarchy therefore applies to an even broader class of dynamical systems than the particular random ensembles we have studied directly.
 
-\subsection{Examples of the analytical relationship between hierarchy and robustness}
+\subsection{Examples of the relationship between hierarchy and robustness}
 
-To test the prediction of the analytical results in \ref{eq:robschematic} and \ref{eq:robustnessmultiple}, we computed approximations to the probability distribution of stability and dynamical robustness relative to network architecture for ensembles of systems having two or three interacting variables (see \refsupp{} \ref{tab:structstabmat} and \ref{tab:structstabmat3}). For all of these, we found that robustness is correlated with connectivity, but that the most robust systems have intermediate connectivity for a given network size (\reffigrobustconnect). Accounting for the number of cycles in a network architecture reveals a strong correlation between robustness and connectivity that was hidden when networks with any number of cycles were considered together (\reffigconnectcycle3D3x3). While the most hierarchical network architecture will always lack cycles altogether, cycle number alone is clearly insufficient to account for robustness as the members of each class span nearly the entire range of possible robustness values. Consistent with our analysis of the symmetries of robustness, we found that the most hierarchical network architecture is the most robust (\reffigrobusthierarchy). Moreover, if we consider hierarchy partitioned by connectivity, we find that there is a monotonic increase in robustness following any line of increasing hierarchy in \reffigconnectdist3D3x3.
+To test the prediction of the analytical results in \ref{eq:robschematic} and \ref{eq:robustnessmultiple}, we computed approximations to the probability distribution of stability and dynamical robustness relative to network architecture for ensembles of systems having two or three interacting variables (see \refsupp{} \ref{tab:structstabmat} and \ref{tab:structstabmat3}). For all of these, we found that robustness is correlated with connectivity, but that the most robust systems have intermediate connectivity for a given network size (\reffigrobustconnect). Accounting for the number of cycles in a network architecture reveals a strong correlation between robustness and connectivity that was hidden when networks with any number of cycles were considered together (\reffigconnectcycle3D3x3). While the most hierarchical network architecture will always lack cycles altogether, cycle number alone is clearly insufficient to account for robustness as the members of each class span nearly the entire range of possible robustness values. Consistent with our analysis, we found that the most hierarchical network architecture is the most robust (\reffigrobusthierarchy). Moreover, if we consider hierarchy partitioned by connectivity, we find that there is a monotonic increase in robustness following any line of increasing hierarchy in \reffigconnectdist3D3x3.
