--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -324,20 +324,16 @@ Inspection of this formula demonstrates that dynamical robustness takes on highe
 where the SCCs correspond to the upper $1 \times 1$ and lower $2 \times 2$ blocks and the other entries correspond to $l$, the links between the SCCs. Thus, in this simple case, we see that maximizing the number of links between SCCs maximizes dynamical robustness.
 
 \subsection{Most hierarchical network architectures maximize dynamical robustness}
-Following the examples of the previous section, here we show, in general, that dynamical robustness is maximized for a given collection of SCCs by maximizing the number of links between them. This is accomplished by demonstrating that any graph $G$ with $l < l_{\mathrm{max}}$ ($l_{\mathrm{max}}$ refers to the maximum possible number of links between the given collection of SCCs) must have a lower dynamical robustness than one of the graphs $G_{\mathrm{max}}$ having $l=l_{\mathrm{max}}$, and that these $G_{\mathrm{max}}$ have SCCs related by the graph $G_{\mathrm{tot}}$ which gives the total ordering on the given set of SCCs.
+Following the examples of the previous section, we now show, in general, that dynamical robustness is maximized for a given collection of SCCs by maximizing the number of links between them.  The proof consists of two stages; deriving an upper bound on the robustness of a network in terms of its SCCs and then showing that this bound is attained by a graph if and only if it maximizes the number of links between its SCCs.
 
-Examining the expression in \ref{eq:robschematic} and noting that $R_{\alpha}$ are all strictly less than one proves that networks maximizing $l$ for a given set of SCCs, will also maximize $R$.  Given two connected components $C_{\alpha}$ and $C_{\beta}$ with $v_{\alpha}$ and $v_{\beta}$ nodes respectively, we have a maximum of $v_{\alpha} v_{\beta}$ links going from $C_{\alpha}$ to $C_{\beta}$.  Hence, $l \le \sum_{(\alpha,\beta) \in \hier(G)} v_{\alpha} v_{\beta}$.  Since every acyclic digraph can be embedded into a totally ordered
-set, we may assume without loss of generality that our components have
-been ordered in a way such that, if $(\alpha,\beta) \in \hier(G)$, then $\alpha <
-\beta$.  Hence, $l \le l_{\mathrm{max}}$ where
+Suppose we have a directed graph $G$ with SCCs $C_1,\ldots,C_n$.  Since every acyclic digraph can be embedded into a totally ordered set, we may assume without loss of generality that our components have been ordered in a way such that, if $(\alpha,\beta) \in \hier(G)$, then $\alpha < \beta$.  Given two connected components $C_{\alpha}$ and $C_{\beta}$ with $v_{\alpha}$ and $v_{\beta}$ nodes respectively, we have a maximum of $v_{\alpha} v_{\beta}$ links going from $C_{\alpha}$ to $C_{\beta}$.  Hence, $l \le l_{\mathrm{max}}$ where
 $$l_{\mathrm{max}} = \sum_{\alpha=1}^{n-1}\sum_{\beta=\alpha+1}^{n}v_{\alpha}
 v_{\beta}~=~\frac{1}{2} \left( \sum_{\alpha=1}^{n} v_{\alpha} \right)^2-\frac{1}{2} \sum_{\alpha=1}^{n}
 v_{\alpha}^2.$$
-Suppose we have a graph $G$ with SCCs $C_1,\ldots,C_n$ and that $G_{\mathrm{tot}}$
-is the graph on $n$ nodes with a link from node $i$ to node $j$ whenever $i < j$.  Then we have a graph $G_{\mathrm{max}}$ such that $\hier (G_{\mathrm{max}}) = G_{\mathrm{tot}}$, the components of $G_{\mathrm{max}}$ are also $C_1, \ldots, C_n$, but that includes all possible links between each pair of components. In this case $R(G)~\le~R(G_{\mathrm{max}})$ for all $G \ne G_{\mathrm{max}}$ where $R(G_{\mathrm{max}})$ is equivalent to \ref{eq:robschematic} with $l_{\mathrm{max}}$ substituted for $l$
+Examining the expression in \ref{eq:robschematic} and noting that $R_{\alpha}$ are all strictly less than one leads to the conclusion that networks maximizing $l$ for a given set of SCCs, will also maximize $R$.  Hence, we have $R(G,S,\mu,\tau) \le R_{\mathrm{max}}$ where $R_{\mathrm{max}}$ is equivalent to \ref{eq:robschematic} with $l_{\mathrm{max}}$ substituted for $l$:
 \begin{widetext}
 \begin{align} \label{eq:sccmaxrobustness}
-R(G_{\mathrm{max}}) =
+R_{\mathrm{max}} =
 \frac{\frac{1}{2} ((\sum_{\alpha=1}^n v_{\alpha})^2 - \sum_{\alpha=1}^n v_{\alpha}^2) +
                     \sum_{\alpha=1}^n \connectivity_{\alpha}
                     % \langle R(\hbox{stab}(C_i),\mu') \rangle_1
@@ -346,9 +342,9 @@ R(G_{\mathrm{max}}) =
                     \sum_{\alpha=1}^n \connectivity_{\alpha}}.
 \end{align}
 \end{widetext}
-% where $R(G_{\mathrm{max}},S,\mu,\tau) = R_{\mathrm{max}}(C_1, \ldots C_n)$.
-%This bound is attained by $G_{\mathrm{max}}$.
-% $\langle R(\hbox{stab} (G_{\mathrm{max}}), \mu') \rangle_1 = R_{\mathrm{max}}(C_1, \ldots C_n)$.
+
+Let $G_{\mathrm{tot}}$ refer to the directed graph on $n$ nodes with a link from node $i$ to node $j$ whenever $i < j$ and let $G_{\mathrm{max}}$ refer to the directed graph whose SCCs are $C_1, \ldots, C_n$, but which includes all possible links between each pair of components $C_\alpha, C_\beta$ when $\alpha < \beta$.  Then $\hier (G_{\mathrm{max}}) = G_{\mathrm{tot}}$ and $R(G_{\mathrm{max}}) = R_{\mathrm{max}}$.  Thus, we see that our bound $R_{\mathrm{max}}$ is attained by $G_{\mathrm{max}}$ so conclude that $R_{\mathrm{max}}$ is indeed the maximum value of dynamical robustness for any G-class of fixed points.  Furthermore, we note that for any other graph $G$, which has the maximum number of links between its SCCs, we also have $R(G) = R_{\mathrm{max}}$. By contrast, for any graph $G$, which has less than the maximum number of links between its SCCs, we have $R(G) < R_{\mathrm{max}}$.
+
 \subsection{Simultaneous perturbation of multiple interaction strengths}
 The results of the previous sections also hold when relationships between multiple system variables are perturbed simultaneously,
 although the notation becomes more complicated.  Suppose that we
