update tables with scc numbers

--- a/paper.tex
+++ b/paper.tex
@@ -115,7 +115,8 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 % \section{Tables}
 \input{tex/table2x2stab}
 \pagebreak
-\input{tex/tablenographs}
+% \input{tex/tablenographs}
+\input{tex/tablenographs-sccs}
 % \input{tex/tablewithgraphs}
 
 \end{document}
