--- a/tex/table2x2stab.tex
+++ b/tex/table2x2stab.tex
@@ -5,34 +5,34 @@
 
 \begin{table*}[h]
 \begin{center}
-\begin{tabular}{ c || c | c | c }
+\begin{tabular}{ c || c | c | c | c | c }
 \hline
-matrix & connectivity & \specialcell{robustness} & \specialcell{probability\\of stability}\\
+matrix & \specialcell{number\\of SCCs} & connectivity & \specialcell{dynamical \\ robustness} & \specialcell{probability\\of stability} & \specialcell{q \\ (\ref{eq:robqual})}\\
 \hline
   $\begin{pmatrix}
 a & b \\
 d & c
-\end{pmatrix}$ & 4 & 0.62 & 0.25 \\
+\end{pmatrix}$ & 1 & 4 & 0.62 & 0.25 & 1.52\\
   $\begin{pmatrix}
 a & b \\
 d & 0
 \end{pmatrix}$, $\begin{pmatrix}
 0 & b \\
 d & c
-\end{pmatrix}$ & 3 & 0.5 & 0.25 \\
+\end{pmatrix}$ & 1 & 3 & 0.5 & 0.25 & 1.5\\
   $\begin{pmatrix}
 a & 0 \\
 d & c
 \end{pmatrix}$, $\begin{pmatrix}
 a & b \\
 0 & c
-\end{pmatrix}$ & 3 & 0.67 & 0.25 \\
+\end{pmatrix}$ & 2 & 3 & 0.67 & 0.25 & \\
 $\begin{pmatrix}
 a & 0 \\
 0 & c
-\end{pmatrix}$ & 2 & 0.5 & 0.25 \\
+\end{pmatrix}$ & 2 & 2 & 0.5 & 0.25 & \\
 \end{tabular}
 \end{center}
-\caption{{\bf Probability of stability under resampling and \emph{a priori} stability for two variable systems derived analytically}. All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat}
+\caption{{\bf Dynamical robustness and probability of stability for two variable systems derived analytically}. All matrices not listed have $0$ probability of stability.}\label{tab:structstabmat}
 \end{table*}
 % \twocolumn
