add equation reference

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -411,7 +411,7 @@ The condition on the total number of nodes means that the $k_i$'s cannot be vari
 
 Since both numerator and denominator are linear in the variables $k_i$ over which we are optimizing, an elementary argument shows the quantity will assume its minimum value at one of the vertices of the simplex.
 The value at the $i$-th vertex equals
-\begin{equation}
+\begin{equation}\label{eq:robqual}
  q_i =
  \frac{2 d_i (1 - R_i)}
       {(k_i - 1) v_i^2 + 2 d_i},
