--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,2 +1,2 @@
 %!TEX root = ../paper.tex
-Support was provided by NIH MSTP training grant T32-GM007288 to CS and NIH R01-CA164468-01 and R01-DA033788 to AB. The authors would like to thank Ximo Pechuan, Daniel Biro, and Jay Sulzberger for helpful suggestions and discussion.
+Support was provided by NIH MSTP training grant T32-GM007288 to CS and NIH R01-CA164468-01 and R01-DA033788 to AB. The authors would like to thank Johan Paulsson for providing a critical review of the paper as well as Ximo Pechuan, Daniel Biro, and Jay Sulzberger for helpful suggestions and discussion.
