explain quantity that gives relative contribution of SCCs to robustness

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -416,7 +416,7 @@ The value at the $i$-th vertex equals
  \frac{2 d_i (1 - R_i)}
       {(k_i - 1) v_i^2 + 2 d_i},
 \end{equation}
-hence the network which maximizes robustness will have as many SCCs as possible be of the type which have the smallest value of $q_i$.
+hence the network that maximizes robustness will have as many SCCs as possible be of the type which have the smallest value of $q_i$. For the SCC consisting of a single node that has a link connecting to itself $\lim_{N \rightarrow \infty} Nq = 1$. For other SCCs of two and three nodes this quantity is computed in \refsupp{} \ref{tab:structstabmat} and \ref{tab:structstabmat3}.
 
 \subsection{Examples of the relationship between hierarchy and robustness}
 
