--- a/tex/table2x2stab.tex
+++ b/tex/table2x2stab.tex
@@ -7,7 +7,7 @@
 \begin{center}
 \begin{tabular}{ c || c | c | c | c | c }
 \hline
-matrix & \specialcell{number\\of SCCs} & connectivity & \specialcell{dynamical \\ robustness} & \specialcell{probability\\of stability} & \specialcell{q \\ (\ref{eq:robqual})}\\
+matrix & \specialcell{number\\of SCCs} & connectivity & \specialcell{dynamical \\ robustness} & \specialcell{probability\\of stability} & \specialcell{$\lim_{N \rightarrow \infty} Nq$ \\ (\ref{eq:robqual})}\\
 \hline
   $\begin{pmatrix}
 a & b \\
