--- a/tex/tablenographs-sccs.tex
+++ b/tex/tablenographs-sccs.tex
@@ -5,7 +5,7 @@
 % \begin{center}
 % \begin{tabular}{ c | c || c | c | c | c | c }
 \hline
-matrix & \specialcell{orbit\\size} & \specialcell{number\\of SCCs} & connectivity & \specialcell{edit\\distance} & \specialcell{cycle\\number} & \specialcell{dynamical \\ robustness} & \specialcell{probability\\of stability} & \specialcell{q \\ (\ref{eq:robqual})}\\
+matrix & \specialcell{orbit\\size} & \specialcell{number\\of SCCs} & connectivity & \specialcell{edit\\distance} & \specialcell{cycle\\number} & \specialcell{dynamical \\ robustness} & \specialcell{probability\\of stability} & \specialcell{$\lim_{N \rightarrow \infty} Nq$ \\ (\ref{eq:robqual})}\\
 \hline
 $\begin{pmatrix}
 1 & 0 & 0\\
